[ADD] estate_nursery : add constraint age for cleaving and recovery

--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -277,14 +277,14 @@
                                 'readonly' : ['|',('status','=',True),
                                 ('age_seed_range','!=',3),('status_age','!=',True)]}"
                                        context="{'tree_view_ref' : 'estate_nursery.view_tree_cleaving_polytone',
-                                       'default_qty_plante': qty_planted}"/>
+                                       'default_qty_plante': qty_planted,'default_date_planted' : date_planted}"/>
                             </page>
 
                             <page string="Recovery Seed" attrs="{'invisible' : [('qty_recovery', '=',0)]}">
                                 <field name="recovery_ids" string="Create Recovery Seed" attrs="{
                                 'readonly' : ['|',('selection_count','=',6)]}"
                                        context="{'tree_view_ref' : 'estate_nursery.view_tree_recovery_seed',
-                                       'default_qty_plante': qty_planted}"/>
+                                       'default_qty_plante': qty_planted,'default_date_planted' : date_planted}"/>
                             </page>
 
                             <page string="Additional Information">
