--- a/estate/views/estate.xml
+++ b/estate/views/estate.xml
@@ -20,13 +20,13 @@
             <field name="model">stock.location</field>
             <field name="inherit_id" ref="stock.view_location_form"/>
             <field name="arch" type="xml">
-                <group string="Additional Information" position="after">
+                <xpath expr="//group" position="inside">
                     <group string="Estate Location Information">
                         <field name="estate_location"/>
                         <field name="estate_location_level"/>
                         <field name="estate_location_type"/>
                     </group>
-                </group>
+                </xpath>
             </field>
         </record>
 
