--- a/hr_fingerprint_ams/views/inherited_estate_upkeep_view.xml
+++ b/hr_fingerprint_ams/views/inherited_estate_upkeep_view.xml
@@ -8,7 +8,7 @@
             <field name="model">estate.upkeep.labour</field>
             <field name="inherit_id" ref="estate.upkeep_labour_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//group[@string='Productivity']" position="after">
+                <xpath expr="//field[@name='ratio_wage_quantity']" position="after">
                     <group string="Fingerprint">
                         <field name="attendance_in"/>
                         <field name="attendance_out"/>
